--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -4,7 +4,6 @@
   %tr
     %th Name
     %th Email
-    %th Password digest
     %th Location
     %th
     %th
@@ -14,8 +13,7 @@
     %tr
       %td= user.name
       %td= user.email
-      %td= user.password_digest
-      %td= user.location_id
+      %td= user.location.name unless user.location.nil?
       %td= link_to 'Show', user
       %td= link_to 'Edit', edit_user_path(user)
       %td= link_to 'Destroy', user, :confirm => 'Are you sure?', :method => :delete
