Location search and page title helper created.

--- a/app/views/excuses/_form.html.haml
+++ b/app/views/excuses/_form.html.haml
@@ -1,7 +1,7 @@
 = form_for @excuse do |f|
 
 	-if @excuse.errors.any?
-		= render 'layouts/errors', :obj => @excuse
+		= render 'layouts/error_messages', :obj => @excuse
 
 	%ul
 		%li= f.label :text
