--- a/app/views/locations/_form.html.haml
+++ b/app/views/locations/_form.html.haml
@@ -1,13 +1,10 @@
 = form_for @location do |f|
-  -if @location.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@location.errors.count, "error")} prohibited this location from being saved:"
-      %ul
-        - @location.errors.full_messages.each do |msg|
-          %li= msg
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .actions
-    = f.submit 'Save'
+	-if @location.errors.any?
+		= render 'layouts/error_messages', :obj => @location
+
+	%ul
+		%li= f.label :name
+		%li= f.text_field :name
+
+		%li= f.submit 'Save'
