Done, heading home.

--- a/app/views/pages/search.html.haml
+++ b/app/views/pages/search.html.haml
@@ -1,2 +1,2 @@
 - provide(:title, 'Search')
-%p Find me in app/views/pages/search.html.haml
+= render 'search_box', :type => 'search', :placeholder => 'Search by words'
