Word search working, renamed Home to Excuse.

--- a/app/views/pages/_footer.html.haml
+++ b/app/views/pages/_footer.html.haml
@@ -1,6 +1,6 @@
 %footer
 	%ul
-		%li= link_to "Home",		root_url
+		%li= link_to "Excuse",		excuse_url
 		%li= link_to "Search",		search_url
 		%li= link_to "Location",	location_url
 		%li= link_to "Tag",			tag_url
