--- a/app/views/pages/search.html.haml
+++ b/app/views/pages/search.html.haml
@@ -1,2 +1,11 @@
 - provide(:title, 'Search')
-= render 'search_box', :type => 'search', :placeholder => 'Search by words'
+
+= render 'search_box', url_path: 'search', type: 'words', placeholder: 'Search by words'
+
+- if @excuses.count >= 1
+	%ul
+		- @excuses.each do |excuse|
+			%li= excuse.text
+- else
+	%ul
+		%li There's no excuse for no excuses! There's only an excuse for Oh, Excuses... Why don't you add one?
