--- a/app/views/pages/_search_box.html.haml
+++ b/app/views/pages/_search_box.html.haml
@@ -1,2 +1,2 @@
-= form_tag "/#{type}", method: 'GET' do
-	= text_field_tag ":#{type}", '', :placeholder => placeholder
+= form_tag url_path, method: 'get' do
+	= text_field_tag type, params[type], placeholder: placeholder
