--- a/app/views/pages/excuse.html.haml
+++ b/app/views/pages/excuse.html.haml
@@ -6,4 +6,4 @@
 		%li= excuse.text
 - else
 	%ul
-		%li There's no excuse for no excuses! There's only an excuse for Oh, Excuses... Why don't you add one?
+		%li There's no excuse for no excuses! There's only an excuse for Oh, Excuses... Why don't you create one?
