Favorite polymorphic model setup. Button needs to be linked.

--- a/app/views/pages/_footer.html.haml
+++ b/app/views/pages/_footer.html.haml
@@ -1,7 +1,9 @@
 %footer
 	%ul
-		%li= link_to "Excuse",		excuse_url
-		%li= link_to "Search",		search_url
-		%li= link_to "Location",	location_url
-		%li= link_to "Tag",			tag_url
-		%li= link_to "Favorite",	favorite_url
+		%li= link_to "Excuse",		app_excuse_url
+		%li= link_to "Search",		app_search_url
+		%li= link_to "Location",	app_location_url
+		%li= link_to "Tag",			app_tag_url
+		%li= link_to "User",		app_user_url
+
+%p= session[:user_id] if session[:user_id]
