--- a/app/views/pages/location.html.haml
+++ b/app/views/pages/location.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, 'Location')
 
-= render 'search_box', form_link: location_path, placeholder: 'Search by locations'
+= render 'search_box', form_link: app_location_path, placeholder: 'Search by locations'
 
 - if @excuses.present?
 	%ul
