Favorites kinda working. Need to link the create action to the favorites attributes.

--- a/app/views/pages/_search_box.html.haml
+++ b/app/views/pages/_search_box.html.haml
@@ -1,2 +1,2 @@
 = form_tag form_link, method: 'get' do
-	= text_field_tag :search, params[:search], placeholder: placeholder
+	= search_field_tag :search, params[:search], placeholder: placeholder
