--- a/app/views/pages/location.html.haml
+++ b/app/views/pages/location.html.haml
@@ -2,7 +2,7 @@
 
 = render 'search_box', form_link: app_location_path, placeholder: 'Search by locations'
 
-- if @excuses.present?
+- if @excuses.count > 0
 	%ul
 		- @excuses.each do |excuse|
 			%li= excuse.text
