--- a/app/views/pages/excuse.html.haml
+++ b/app/views/pages/excuse.html.haml
@@ -1,5 +1,8 @@
 - provide(:title, 'Excuses')
 
+- if notice
+	= render 'layouts/notice', :notice => notice, :type => "info"
+
 - if @excuses.count > 0
 	%ul
 		- @excuses.each do |excuse|
@@ -7,8 +10,8 @@
 				= excuse.text
 				%span
 					= form_tag favorites_path do
-						= hidden_field_tag :favorite, excuse.id
-						= submit_tag "Favorite"
+						= hidden_field_tag :excuse, excuse.id
+						= submit_tag "Favorite", :name => nil
 - else
 	%ul
 		%li There's no excuse for no excuses! There's only an excuse for Oh, Excuses... Why don't you create one?
