--- a/app/views/pages/user.html.haml
+++ b/app/views/pages/user.html.haml
@@ -13,7 +13,7 @@
 - if @favorites.count > 0
 	%ul
 		- @favorites.each do |excuse|
-			%li= excuse.text
+			%li= excuse
 - else
 	%ul
 		%li You don't have any favorite excuses!
