Did a bunch of changes. Linked excuses create to user and user location. Need to setup the update part.

--- a/app/views/pages/_footer.html.haml
+++ b/app/views/pages/_footer.html.haml
@@ -4,6 +4,7 @@
 		%li= link_to "Search",		app_search_url
 		%li= link_to "Location",	app_location_url
 		%li= link_to "Tag",			app_tag_url
+		%li= link_to "Favorite",	app_favorite_url
 		%li= link_to "User",		app_user_url
 
 %p= session[:user_id] if session[:user_id]
