--- a/app/views/pages/_header.html.haml
+++ b/app/views/pages/_header.html.haml
@@ -1,2 +1,11 @@
 %header
-	%h1= yield(:title)
+	%h1= link_to yield(:title), root_url
+
+- if session[:user_id]
+	%ul
+		%li= link_to "Create excuse", new_excuse_path
+		%li= link_to "Logout", logout_path
+- else
+	%ul
+		%li= link_to "Sign up", new_user_path
+		%li= link_to "Login", login_path
