--- a/app/views/excuses/_form.html.haml
+++ b/app/views/excuses/_form.html.haml
@@ -7,4 +7,7 @@
 		%li= f.label :text
 		%li= f.text_field :text
 
+		%li= f.label :tag_names, "Tags"
+		%li= f.text_field :tag_names
+
 		%li= f.submit 'Save'
