Committing CSS. Going to make the carousel.

--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -1,8 +1,8 @@
 /* variables */
 $black: #000000;
-$blue: #ACCFE2;
-$blue_shade: #96B4C5;
-$red: #BD3B36;
-$red_shade: #A53430;
-$yellow: #FFF235;
-$yellow_shade: #DFD32E;
+$blue: #accfe2;
+$blue_shade: #96b4c5;
+$red: #bd3b36;
+$red_shade: #a53430;
+$yellow: #fff235;
+$yellow_shade: #dfd32e;
