--- a/app/assets/stylesheets/global/fontface.css.scss
+++ b/app/assets/stylesheets/global/fontface.css.scss
@@ -27,12 +27,12 @@ Eye                 		V                   content: 'V';
 */
 
 @font-face {
-    font-family: 'IcoMoonRegular';
-    src: url('../fonts/icon_font-webfont.eot');
-    src: url('../fonts/icon_font-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/icon_font-webfont.woff') format('woff'),
-         url('../fonts/icon_font-webfont.ttf') format('truetype'),
-         url('../fonts/icon_font-webfont.svg#IcoMoonRegular') format('svg');
+    font-family: "IcoMoonRegular";
+    src: url('/assets/icon_font-webfont.eot');
+    src: url('/assets/icon_font-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/assets/icon_font-webfont.woff') format('woff'),
+         url('/assets/icon_font-webfont.ttf') format('truetype'),
+         url('/assets/icon_font-webfont.svg#IcoMoonRegular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
