--- a/app/assets/stylesheets/global/global.css.scss
+++ b/app/assets/stylesheets/global/global.css.scss
@@ -16,11 +16,11 @@
 
 html, body {
 	font: 16px/24px "Helvetica Neue", Helvetica, Arial, sans-serif;
-	height: 100%
+	height: 100%;
 }
 
 body {
-	background: url('../furley_bg.png');;
+	background: url('/assets/furley_bg.png');
 }
 a {
 	color: $black;
