--- a/app/assets/stylesheets/global/section.css.scss
+++ b/app/assets/stylesheets/global/section.css.scss
@@ -1,36 +1,120 @@
+/* imports */
+@import 'variables';
+@import 'mixins';
+
 section {
 	height: 100%;
-	.slider {
+	#carousel-excuses {
 		height: 100%;
-		.prev, .next {
+		.previous-button, .forward-button {
 			background-color: rgba(0, 0, 0, 0.05);
 			float: left;
 			height: 100%;
 			width: 10%;
+			z-index: 2;
+			
+		}
+		.previous-button {
+			background-image: url('/assets/upload.svg');
+			background-image: none, url('/assets/upload.svg'), url('/assets/upload.svg');
+			background-size: 60% auto;
+			background-repeat: no-repeat;
+			background-position: center center;
+			opacity: 0.4;
+			transition: opacity 200ms;
+			-moz-transition: opacity 200ms;
+			-webkit-transition: opacity 200ms;
+			-o-transition: opacity 200ms;
 			&:hover {
-				background-color: rgba(0, 0, 0, 0.15);
-			}
-			.label {
-				position: absolute;
-				top: 45%;
-				span {
-					display: block;
-					text-align: center;
-				}
+				opacity: 0.6;
+				transition: opacity 200ms;
+				-moz-transition: opacity 200ms;
+				-webkit-transition: opacity 200ms;
+				-o-transition: opacity 200ms;
 			}
 		}
-		.prev {
+		.forward-button {
+			background-image: url('/assets/upload.svg');
+			background-image: none, url('/assets/upload.svg'), url('/assets/upload.svg');
+			background-size: 60% auto;
+			background-repeat: no-repeat;
+			background-position: center center;
+			opacity: 0.4;
+			transition: opacity 200ms;
+			-moz-transition: opacity 200ms;
+			-webkit-transition: opacity 200ms;
+			-o-transition: opacity 200ms;
+			&:hover {
+				opacity: 0.6;
+				transition: opacity 200ms;
+				-moz-transition: opacity 200ms;
+				-webkit-transition: opacity 200ms;
+				-o-transition: opacity 200ms;
+			}
 		}
-		.content {
-			padding-top: 90px;
-			padding-bottom: 90px;
+		.carousel-inner {
 			float: left;
+			margin-top: 90px;
+			margin-bottom: 5%;
 			width: 80%;
-			ul {
-				margin: 40px;
+			.item {
+				padding: 5%;
+				min-height: 200px;
 			}
 		}
-		.next {
+	}
+}
+
+.details {
+	margin: 20px 0;	
+	h3 {
+		float: left;
+		font-size: 12px;
+		letter-spacing: 2px;
+		line-height: 32px;
+		margin-right: 10px;
+		text-transform: uppercase;
+	}
+	ul {
+		float: left;
+		li {
+			background-color: $blue;
+			color: #fff;
+			float: left;
+			font-size: 12px;
+			letter-spacing: 1px;
+			line-height: 18px;
+			margin: 2px 5px;
+			padding: 5px 10px;
+			text-transform: uppercase;
+			a {
+				color: #fff;
+			}
+		}
+	}
+}
+
+.favorites {
+	
+}
+.tags {
+	li.tag {
+		background-color: $blue;
+		color: #fff;
+		float: left;
+		font-size: 12px;
+		letter-spacing: 1px;
+		line-height: 18px;
+		margin: 2px 5px;
+		padding: 5px 10px;
+		text-transform: uppercase;
+		@include border_radius(25px);
+		@include box_shadow_inset(0, 0, 2px, 2px, rgba(0, 0, 0, 0.03));
+		a {
+			color: #fff;
+		}
+		&:hover {
+			background-color: $blue_shade;
 		}
 	}
 }
