Much happier with the CSS. Lots of refactoring to do. Write Excuse button needs work. Favorite and the footer as well.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require global/reset
  *= require global/fontface
  *= require global/global
+ *= require global/forms
  *= require global/header
  *= require carousel
  *= require global/section
