--- a/app/assets/stylesheets/global/header.css.scss
+++ b/app/assets/stylesheets/global/header.css.scss
@@ -10,48 +10,45 @@
  *
  */
 
-/* imports */
 @import 'variables';
 @import 'mixins';
 
-/* page */
 header {
 	position: fixed;
 	top: 0;
-	right: 0;
 	left: 0;
+	right: 0;
 	border-bottom: 2px solid $red_shade;
 	z-index: 1000;
-
-	@include box_shadow_inset(0px, 0px, 0px, 0px, rgba(0, 0, 0, 0.1));
 	background-color: $red;
-	
-	a, a:link, a:hover, a:visited {
+	@include box_shadow_inset(0px, 0px, 0px, 0px, rgba(0, 0, 0, 0.1));
+	a {
 		color: #fff;
 	}
 	h1 {
 		font: bold 24px/32px "Helvetica Neue", Helvetica, Arial, sans-serif;
 		text-align: center;
-		padding: 10px 0;
-		letter-spacing: -3px;
+		padding: 5px 0;
+		letter-spacing: -2px;
 		@include text_shadow(0, 3px, 0, $red_shade);
 	}
 	ul {
 		position: absolute;
 		top: 0;
 		right: 0;
-		margin: 14px 0;
+		margin: 0;
 		li {
-			@include font_face;
-			font-size: 22px;
 			float: left;
+			a {
+				img {
+					height: auto;
+					width: 40%;
+				}
+			}
 		}
 	}
 }
 
 .btn-create {
-	width: 64px;
-	height: 64px;
-	overflow: hidden;
 	background-color: $red_shade;
 }
