--- a/app/assets/stylesheets/global/section.css.scss
+++ b/app/assets/stylesheets/global/section.css.scss
@@ -1,25 +1,18 @@
-/* imports */
 @import 'variables';
 @import 'mixins';
+
 
 section {
 	height: 100%;
 	#carousel-excuses {
 		height: 100%;
-		.previous-button, .forward-button {
+		.carousel-previous-button, .carousel-forward-button {
 			background-color: rgba(0, 0, 0, 0.05);
 			float: left;
 			height: 100%;
 			width: 10%;
 			z-index: 2;
-			
-		}
-		.previous-button {
-			background-image: url('/assets/upload.svg');
-			background-image: none, url('/assets/upload.svg'), url('/assets/upload.svg');
-			background-size: 60% auto;
-			background-repeat: no-repeat;
-			background-position: center center;
+			cursor: pointer;
 			opacity: 0.4;
 			transition: opacity 200ms;
 			-moz-transition: opacity 200ms;
@@ -33,24 +26,19 @@ section {
 				-o-transition: opacity 200ms;
 			}
 		}
-		.forward-button {
-			background-image: url('/assets/upload.svg');
-			background-image: none, url('/assets/upload.svg'), url('/assets/upload.svg');
+		.carousel-previous-button {
+			background-image: url('/assets/arrow_left_black.png');
+			background-image: none, url('/assets/arrow_left_black.svg'), url('/assets/arrow_left_black.png');
 			background-size: 60% auto;
 			background-repeat: no-repeat;
 			background-position: center center;
-			opacity: 0.4;
-			transition: opacity 200ms;
-			-moz-transition: opacity 200ms;
-			-webkit-transition: opacity 200ms;
-			-o-transition: opacity 200ms;
-			&:hover {
-				opacity: 0.6;
-				transition: opacity 200ms;
-				-moz-transition: opacity 200ms;
-				-webkit-transition: opacity 200ms;
-				-o-transition: opacity 200ms;
-			}
+		}
+		.carousel-forward-button {
+			background-image: url('/assets/arrow_right_black.png');
+			background-image: none, url('/assets/arrow_right_black.svg'), url('/assets/arrow_right_black.png');
+			background-size: 60% auto;
+			background-repeat: no-repeat;
+			background-position: center center;
 		}
 		.carousel-inner {
 			float: left;
@@ -60,61 +48,74 @@ section {
 			.item {
 				padding: 5%;
 				min-height: 200px;
+				h2 {
+					font-size: 42px;
+					line-height: 56px;
+					margin-bottom: 40px;
+					@include text_shadow(1px, 3px, 0, #fff);
+				}
 			}
 		}
 	}
 }
 
 .details {
-	margin: 20px 0;	
+	color: #fff;
+	font-size: 12px;
+	line-height: 18px;
+	letter-spacing: 1px;
+	margin: 10px 0;	
+	text-transform: uppercase;
 	h3 {
-		float: left;
-		font-size: 12px;
-		letter-spacing: 2px;
-		line-height: 32px;
-		margin-right: 10px;
-		text-transform: uppercase;
+		color: #000;
+		margin-bottom: 10px;
 	}
-	ul {
+	a {
+		color: #fff;
+	}
+	div {
+		border-left: 1px solid #ccc;
+		border-right: 1px solid #fff;
+		padding-right: 20px;
 		float: left;
+		padding: 5px 20px;
+	}
+	.favorite {
+		border-left: 0;
+	}
+	.location {
+		li {
+			background-color: $green;
+			display: inline-block;
+			margin: 0 0 10px 0;
+			padding: 5px 10px;
+			@include border_radius(25px);
+			@include box_shadow_inset(0, 0, 2px, 2px, rgba(0, 0, 0, 0.03));
+			@include box_shadow(0, 2px, 0, 0, #fff);
+			a {
+				@include text_shadow(1px, 1px, 0, $green_shade);
+			}
+			&:hover {
+				background-color: $green_shade;
+			}
+		}		
+	}
+	.tags {
+		border-right: 0;
 		li {
 			background-color: $blue;
-			color: #fff;
-			float: left;
-			font-size: 12px;
-			letter-spacing: 1px;
-			line-height: 18px;
-			margin: 2px 5px;
-			padding: 5px 10px;
-			text-transform: uppercase;
+			display: inline-block;
+			margin: 0 10px 10px 0;
+			padding: 5px 10px;			
+			@include border_radius(25px);
+			@include box_shadow_inset(0, 0, 2px, 2px, rgba(0, 0, 0, 0.03));
+			@include box_shadow(0, 2px, 0, 0, #fff);
 			a {
-				color: #fff;
+				@include text_shadow(1px, 1px, 0, $blue_shade);
 			}
-		}
-	}
-}
-
-.favorites {
-	
-}
-.tags {
-	li.tag {
-		background-color: $blue;
-		color: #fff;
-		float: left;
-		font-size: 12px;
-		letter-spacing: 1px;
-		line-height: 18px;
-		margin: 2px 5px;
-		padding: 5px 10px;
-		text-transform: uppercase;
-		@include border_radius(25px);
-		@include box_shadow_inset(0, 0, 2px, 2px, rgba(0, 0, 0, 0.03));
-		a {
-			color: #fff;
-		}
-		&:hover {
-			background-color: $blue_shade;
+			&:hover {
+				background-color: $blue_shade;
+			}
 		}
 	}
 }
