--- a/app/views/pages/_header.html.haml
+++ b/app/views/pages/_header.html.haml
@@ -3,7 +3,7 @@
 
 	- if session[:user_id]
 		%ul
-			%li= link_to "N", new_excuse_path, :class => "btn btn-create icon"
+			%li= link_to (image_tag "/assets/write.svg"), new_excuse_path, :class => "btn btn-create icon"
 	- else
 		%ul
 			%li= link_to "Sign Up", new_user_path
