--- a/app/views/pages/_search_box.html.haml
+++ b/app/views/pages/_search_box.html.haml
@@ -1,2 +1,3 @@
-= form_tag form_link, method: 'get' do
-	= search_field_tag :search, params[:search], placeholder: placeholder
+.search
+	= form_tag form_link, method: 'get', :class => "form-search" do
+		= search_field_tag :search, params[:search], placeholder: placeholder, :class => "search-query"
