--- a/app/views/pages/location.html.haml
+++ b/app/views/pages/location.html.haml
@@ -3,12 +3,17 @@
 - if notice
 	= render 'layouts/notice', :notice => notice, :type => "info"
 
-= render 'search_box', form_link: app_location_path, placeholder: 'Search by locations'
+%section
+	#carousel-excuses.carousel.slide
 
-- if @excuses.count > 0
-	%ul
-		- @excuses.each do |excuse|
-			%li= excuse.text
-- else
-	%ul
-		%li Can you believe it? There are no excuses from this location... Yet. Why don't you create one?
+		.carousel-previous-button
+			.carousel-previous-icon
+
+		.carousel-inner
+			= render 'search_box', form_link: app_location_path, placeholder: 'Search by locations'
+			= render 'carousel', :excuses => @excuses
+
+		.carousel-forward-button
+			.carousel-forward-icon
+
+%span Can you believe it? There are no excuses from this location... Yet. Why don't you create one?
