--- a/app/views/pages/_carousel.html.haml
+++ b/app/views/pages/_carousel.html.haml
@@ -10,7 +10,7 @@
 							%h3 Favorite
 							= form_tag favorites_path do
 								= hidden_field_tag :excuse, excuse.id
-								= submit_tag "Favorite", :name => nil
+								%input{ :type => "image", :src => "/assets/heart_black.svg", :alt => "Yeah favorite!", :class => "btn-favorite #{favorited(excuse, @current_user)}" }
 					.location
 						%h3 Location
 						%ul
@@ -31,7 +31,7 @@
 							%h3 Favorite
 							= form_tag favorites_path do
 								= hidden_field_tag :excuse, excuse.id
-								= submit_tag "Favorite", :name => nil
+								%input{ :type => "image", :src => "/assets/heart_black.svg", :alt => "Yeah favorite!", :class => "btn-favorite" }
 					.location
 						%h3 Location
 						%ul
