--- a/app/assets/stylesheets/global/section.css.scss
+++ b/app/assets/stylesheets/global/section.css.scss
@@ -82,13 +82,17 @@ section {
 	}
 	.favorite {
 		border-left: 0;
-		input.btn-favorite {
-			width: 40px;
+		form {
+			text-align: center;
+		}
+		.btn-favorite {
+			width: 36px;
 			height: auto;
+			margin-top: -4px;
 			opacity: 0.2;
 		}
-		input.btn-favorite.active {
-			opacity: 1;
+		.btn-favorite.true {
+			opacity: 0.8;
 		}
 	}
 	.location {
