--- a/app/views/pages/_header.html.haml
+++ b/app/views/pages/_header.html.haml
@@ -3,8 +3,8 @@
 
 	- if session[:user_id]
 		%ul
-			%li= link_to (image_tag "/assets/write.svg"), new_excuse_path, :class => "btn btn-create icon"
+			%li= link_to "", new_excuse_path, :title => "Write an excuse", :class => "btn btn-write"
 	- else
 		%ul
-			%li= link_to "Sign Up", new_user_path
-			%li= link_to "Login", login_path
+			%li= link_to "Sign Up", new_user_path, :title => "Create an account", :class => "btn"
+			%li= link_to "Login", login_path, :title => "Login to your excuse", :class => "btn"
