--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  *= require global/forms
  *= require global/header
  *= require carousel
+ *= require account
  *= require global/section
  *= require global/nav
  *= require global/footer
